force-app/main/default/objects/QCC_Flight_Disruption_PE__e/QCC_Flight_Disruption_PE__e.object-meta.xml
<CustomObject>
    <description>Used to map the Flight Disruption Resons with Flight failure record</description>
    <label>QCC Flight Disruption PE</label>
    <pluralLabel>QCC Flight Disruption PE</pluralLabel>
</CustomObject>