force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/AdditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalNotes__c</fullName>
    <label>Additional Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>