force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <label>Arrival Airport</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>