force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/DelayDuration__c.field-meta.xml
<CustomField>
    <fullName>DelayDuration__c</fullName>
    <label>Delay Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>