force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/DepartureDateLocal__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateLocal__c</fullName>
    <label>Departure Date Local</label>
    <type>Date</type>
</CustomField>