force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/EstimatedArrivalZonedTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrivalZonedTime__c</fullName>
    <label>Estimated Arrival Zoned Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>