force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/EstimatedDepartureZonedTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDepartureZonedTime__c</fullName>
    <label>Estimated Departure Zoned Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>