force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/EventCreationTimeUtc__c.field-meta.xml
<CustomField>
    <fullName>EventCreationTimeUtc__c</fullName>
    <label>EventCreationTimeUtc</label>
    <type>DateTime</type>
</CustomField>