force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>