force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>