force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/OgsMessageId__c.field-meta.xml
<CustomField>
    <fullName>OgsMessageId__c</fullName>
    <label>OgsMessageId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>