force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/Operating_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Operating_Carrier__c</fullName>
    <label>Operating Carrier</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>