force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/ScheduledArrivalTimeUtc__c.field-meta.xml
<CustomField>
    <fullName>ScheduledArrivalTimeUtc__c</fullName>
    <label>Scheduled Arrival Time Utc</label>
    <type>DateTime</type>
</CustomField>