force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/ScheduledDepartureZonedTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDepartureZonedTime__c</fullName>
    <label>Scheduled Departure ZonedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>