force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <label>TypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>