force-app/main/default/objects/QCC_Flight_Disruption_PE__e/fields/TypeText__c.field-meta.xml
<CustomField>
    <fullName>TypeText__c</fullName>
    <label>TypeText</label>
    <length>30</length>
    <type>Text</type>
</CustomField>